Renaming files and upping version

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "osbTvFilmGuide",
-  "version": "0.0.2",
+  "name": "osbFilmTvGuide",
+  "version": "0.0.3",
   "authors": [
     "Ben Burton <sistematic3@yahoo.co.uk>"
   ],
